added body wordpress and brush

--- a/index.html
+++ b/index.html
@@ -20,15 +20,32 @@
         <button>Showcase</button>
         <button>Hosting</button>
         <button>Extend<span id="arrow"></span></button>
-        <button>Learn</button>
-        <button>Community</button>
-        <button>About</button>
+        <button>Learn<span id="arrow"></span></button>
+        <button>Community<span id="arrow"></span></button>
+        <button>About<span id="arrow"></span></button>
       </div>
       <div id="right-btns">
         <button id="search">
           <img src="res/img/search-for-light-bg.png" alt="search-logo" />
         </button>
         <button id="getwordpress">Get WordPress</button>
+      </div>
+    </div>
+    <div id="body">
+      <div id="left">
+        <div id="h1-container"><h1>Meet WordPress</h1></div>
+        <div id="txt-content">
+          <p>
+            The open source publishing platform of choice for millions of
+            websites worldwide—from creators and small businesses to
+            enterprises.
+          </p>
+        </div>
+      </div>
+      <div id="right">
+        <div id="img-brush-container">
+          <img src="res/img/brush.png" alt="blue-brush" />
+        </div>
       </div>
     </div>
   </body>
