--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <title>Blog Tool, Publishing Platform, and CMS - WordPress.org</title>
     <link rel="stylesheet" href="index.css" />
+    <script src="index.js"></script>
   </head>
 
   <body>
     <div id="header">
       <div id="logo-container">
-        <button>
+        <button onclick="openIndex()">
           <img
             src="res//img/WordPress-logotype-wmark.png"
             alt="WordPress-logotype-wmark"
@@ -16,13 +17,43 @@
         </button>
       </div>
       <div id="nav">
-        <button>News</button>
-        <button>Showcase</button>
-        <button>Hosting</button>
-        <button>Extend<span id="arrow"></span></button>
-        <button>Learn<span id="arrow"></span></button>
-        <button>Community<span id="arrow"></span></button>
-        <button>About<span id="arrow"></span></button>
+        <button onclick="openNews()">News</button>
+        <button onclick="openShowCase()">Showcase</button>
+        <button onclick="openHosting()">Hosting</button>
+        <div id="dropdown">
+          <button id="dropdown_btn">Extend<span id="arrow"></span></button>
+          <div id="dropdown-menu">
+            <li><a href="#">Themes</a></li>
+            <li><a href="#">Plugins</a></li>
+            <li><a href="#">Patterns</a></li>
+            <li><a href="#">Blocks</a></li>
+          </div>
+        </div>
+        <div id="dropdown">
+          <button id="dropdown_btn">Learn<span id="arrow"></span></button>
+          <div id="dropdown-menu">
+            <li><a href="#">Learn WordPress</a></li>
+            <li><a href="#">Documentation</a></li>
+            <li><a href="#">Forums</a></li>
+            <li><a href="#">Developers</a></li>
+          </div>
+        </div>
+        <div id="dropdown">
+          <button id="dropdown_btn">Community<span id="arrow"></span></button>
+          <div id="dropdown-menu">
+            <li><a href="#">Make WordPress</a></li>
+            <li><a href="#">Photo Directory</a></li>
+            <li><a href="#">Five for the Future</a></li>
+            <li><a href="#">Events</a></li>
+          </div>
+        </div>
+        <div id="dropdown">
+          <button id="dropdown_btn">About<span id="arrow"></span></button>
+          <div id="dropdown-menu">
+            <li><a href="#">About WordPress</a></li>
+            <li><a href="#">Enterprise</a></li>
+          </div>
+        </div>
       </div>
       <div id="right-btns">
         <button id="search">
@@ -45,6 +76,38 @@
       <div id="right">
         <div id="img-brush-container">
           <img src="res/img/brush.png" alt="blue-brush" />
+        </div>
+      </div>
+    </div>
+    <div id="blank">
+      WordPress también está disponible en &nbsp;<a href="#" style="text-decoration: underline; color: blue;">Español.</a>
+    </div>
+    <div id="body2">
+      <div id="content-1">
+        <div id="builde-img-container"><img src="res/img/design.png" alt="build-img"></div>
+        <h2>Design</h2>
+        <p>Create any website with flexible design tools and the power of blocks. Start with a blank canvas or choose a theme. Customize every detail—no code needed.</p>
+      </div>
+      <div id="content-2">
+        <div id="builde-img-container"><img src="res/img/build.png" alt="build-img"></div>
+        <h2>Build</h2>
+        <p>See how your site will look in real time, even as you add, edit, and rearrange content—with intuitive editing and integrated features to manage it all.</p>
+      </div>
+      <div id="content-3">
+        <div id="builde-img-container"><img src="res/img/extend.png" alt="build-img"></div>
+        <h2>Extend</h2>
+        <p>Make your site do whatever you need it to. Add a store, analytics, newsletter, social media integration; you’re in control with an extensive library of plugins.</p>
+      </div>
+    </div>
+    <div id="body3">
+      <div id="bd3-content1">
+        <h1 style="font-size: 36px; font-family: serif; font-weight: normal;">See what's new</h1>
+        <p>Elevate your site-building experience with WordPress 6.5. This release includes a new way to manage fonts, exciting new foundational APIs for developers, and an impressive performance boost.</p>
+        <button>Discover WordPress 6.5</button>
+      </div>
+      <div id="bd3-content2">
+        <div id="bd3-content2-img-container">
+          <img src="res/img/see-whats-new.png" alt="see-whats-new-img">
         </div>
       </div>
     </div>
