--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <!--------------------------------------------------------------------HEADER START-------------------------------------------------------------------->
     <div id="header">
       <div id="logo-container">
         <button onclick="openIndex()">
@@ -62,54 +63,147 @@
         <button id="getwordpress">Get WordPress</button>
       </div>
     </div>
-    <div id="body">
-      <div id="left">
-        <div id="h1-container"><h1>Meet WordPress</h1></div>
-        <div id="txt-content">
-          <p>
+    <!--------------------------------------------------------------------HEADER END-------------------------------------------------------------------->
+
+    <!--------------------------------------------------------------------BODY CONTENT START-------------------------------------------------------------------->
+    <div id="body-container">
+      <div id="body-content-1">
+        <div id="meet-wordpress-container">
+          <h1 style="font-size: 70px; font-family: serif; font-weight: normal">
+            Meet WordPress
+          </h1>
+          <p style="width: 85%">
             The open source publishing platform of choice for millions of
             websites worldwide—from creators and small businesses to
             enterprises.
           </p>
         </div>
-      </div>
-      <div id="right">
-        <div id="img-brush-container">
+        <div id="blue-brush-container">
           <img src="res/img/brush.png" alt="blue-brush" />
         </div>
       </div>
-    </div>
-    <div id="blank">
-      WordPress también está disponible en &nbsp;<a href="#" style="text-decoration: underline; color: blue;">Español.</a>
-    </div>
-    <div id="body2">
-      <div id="content-1">
-        <div id="builde-img-container"><img src="res/img/design.png" alt="build-img"></div>
-        <h2>Design</h2>
-        <p>Create any website with flexible design tools and the power of blocks. Start with a blank canvas or choose a theme. Customize every detail—no code needed.</p>
-      </div>
-      <div id="content-2">
-        <div id="builde-img-container"><img src="res/img/build.png" alt="build-img"></div>
-        <h2>Build</h2>
-        <p>See how your site will look in real time, even as you add, edit, and rearrange content—with intuitive editing and integrated features to manage it all.</p>
-      </div>
-      <div id="content-3">
-        <div id="builde-img-container"><img src="res/img/extend.png" alt="build-img"></div>
-        <h2>Extend</h2>
-        <p>Make your site do whatever you need it to. Add a store, analytics, newsletter, social media integration; you’re in control with an extensive library of plugins.</p>
+      <div id="blank">
+        WordPress también está disponible en &nbsp;<a
+          href="#"
+          style="text-decoration: underline; color: blue"
+          >Español.</a
+        >
       </div>
     </div>
-    <div id="body3">
-      <div id="bd3-content1">
-        <h1 style="font-size: 36px; font-family: serif; font-weight: normal;">See what's new</h1>
-        <p>Elevate your site-building experience with WordPress 6.5. This release includes a new way to manage fonts, exciting new foundational APIs for developers, and an impressive performance boost.</p>
+    <div id="pic-containers">
+      <div id="design-container">
+        <div id="design-card-1">
+          <img src="res/img/design.png" alt="design-img" />
+        </div>
+        <h2 style="margin: 16px 0">Design</h2>
+        <p>
+          Create any website with flexible design tools and the power of blocks.
+          Start with a blank canvas or choose a theme. Customize every detail—no
+          code needed.
+        </p>
+      </div>
+      <div id="build-container">
+        <div id="build-card-1">
+          <img src="res/img/build.png" alt="build-img" />
+        </div>
+        <h2 style="margin: 16px 0">Build</h2>
+        <p>
+          See how your site will look in real time, even as you add, edit, and
+          rearrange content—with intuitive editing and integrated features to
+          manage it all.
+        </p>
+      </div>
+      <div id="extend-container">
+        <div id="extend-card-1">
+          <img src="res/img/extend.png" alt="extend-img" />
+        </div>
+        <h2 style="margin: 16px 0">Extend</h2>
+        <p>
+          Make your site do whatever you need it to. Add a store, analytics,
+          newsletter, social media integration; you’re in control with an
+          extensive library of plugins.
+        </p>
+      </div>
+    </div>
+    <div id="swn-container">
+      <div id="swn-content-1">
+        <h1 style="font-size: 36px; font-family: serif; font-weight: normal">
+          See what's new
+        </h1>
+        <p
+          style="
+            margin: 16px 0;
+            width: 85%;
+            line-height: 24px;
+            letter-spacing: 0.5px;
+          "
+        >
+          Elevate your site-building experience with WordPress 6.5. This release
+          includes a new way to manage fonts, exciting new foundational APIs for
+          developers, and an impressive performance boost.
+        </p>
         <button>Discover WordPress 6.5</button>
       </div>
-      <div id="bd3-content2">
-        <div id="bd3-content2-img-container">
-          <img src="res/img/see-whats-new.png" alt="see-whats-new-img">
+      <div id="swn-content-2">
+        <div id="swn-content-2-img">
+          <img src="res/img/see-whats-new.png" alt="swn-img" />
         </div>
       </div>
     </div>
+    <div id="platform-container">
+      <h1>One platform, a universe of possiblities</h1>
+      <p style="width: 50%">
+        Discover a collection of website examples from around the world, curated
+        to spotlight gorgeous design, technical innovation, and the limitless
+        power of WordPress.
+      </p>
+      <div id="logos-container">
+        <div id="logo1">
+          <img src="res/img/rolling-stone.png" alt="rolling-stone" />
+        </div>
+        <div id="logo2">
+          <img src="res/img/Time-Magazine.png" alt="Time-Magazine" />
+        </div>
+        <div id="logo3"><img src="res/img/NASA-1.png" alt="NASA-img" /></div>
+        <div id="logo4">
+          <img src="res/img/Microsoft.png" alt="Microsoft-img" />
+        </div>
+        <div id="logo5">
+          <img src="res/img/tech-crunch.png" alt="tech-crunch" />
+        </div>
+        <div id="logo6">
+          <img src="res/img/harvard.png" alt="harvard-img" />
+        </div>
+      </div>
+    </div>
+    <div id="samples">
+      <div id="sample1">
+        <img src="res/img/wordpress-samples2.png" alt="sample2" />
+      </div>
+      <div id="sample2">
+        <img src="res/img/wordpress-samples.png" alt="sample1" />
+      </div>
+      <div id="sample3">
+        <img src="res/img/wordpress-samples3.png" alt="sample3" />
+      </div>
+    </div>
+    <div id="wordpress-community-container">
+      <div id="community-text-container">
+        <h2>Meet the WordPress community</h2>
+        <p>
+          Behind the technology is a diverse collective of people collaborating
+          and gathering from around the world. We hold regular events with
+          opportunities to learn more about WordPress and the latest tech
+          trends, connect with fellow industry experts, and foster your
+          professional growth.
+        </p>
+        <p>
+          We’re united by the spirit of open source, and the freedom to build,
+          transform, and share without barriers. Everyone is welcome.
+        </p>
+      </div>
+      <div id="community-img-container"></div>
+    </div>
+    <!--------------------------------------------------------------------BODY CONTENT END-------------------------------------------------------------------->
   </body>
 </html>
