--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="logo-container">
         <button onclick="openIndex()">
           <img
-            src="res//img/WordPress-logotype-wmark.png"
+            src="res/WordPress-logotype-wmark.png"
             alt="WordPress-logotype-wmark"
           />
         </button>
@@ -58,7 +58,7 @@
       </div>
       <div id="right-btns">
         <button id="search">
-          <img src="res/img/search-for-light-bg.png" alt="search-logo" />
+          <img src="res/search-for-light-bg.png" alt="search-logo" />
         </button>
         <button id="getwordpress">Get WordPress</button>
       </div>
@@ -79,7 +79,7 @@
           </p>
         </div>
         <div id="blue-brush-container">
-          <img src="res/img/brush.png" alt="blue-brush" />
+          <img src="res/brush.png" alt="blue-brush" />
         </div>
       </div>
       <div id="blank">
@@ -93,7 +93,7 @@
     <div id="pic-containers">
       <div id="design-container">
         <div id="design-card-1">
-          <img src="res/img/design.png" alt="design-img" />
+          <img src="res/design.png" alt="design-img" />
         </div>
         <h2 style="margin: 16px 0">Design</h2>
         <p>
@@ -104,7 +104,7 @@
       </div>
       <div id="build-container">
         <div id="build-card-1">
-          <img src="res/img/build.png" alt="build-img" />
+          <img src="res/build.png" alt="build-img" />
         </div>
         <h2 style="margin: 16px 0">Build</h2>
         <p>
@@ -115,7 +115,7 @@
       </div>
       <div id="extend-container">
         <div id="extend-card-1">
-          <img src="res/img/extend.png" alt="extend-img" />
+          <img src="res/extend.png" alt="extend-img" />
         </div>
         <h2 style="margin: 16px 0">Extend</h2>
         <p>
@@ -146,7 +146,7 @@
       </div>
       <div id="swn-content-2">
         <div id="swn-content-2-img">
-          <img src="res/img/see-whats-new.png" alt="swn-img" />
+          <img src="res/see-whats-new.png" alt="swn-img" />
         </div>
       </div>
     </div>
@@ -159,32 +159,32 @@
       </p>
       <div id="logos-container">
         <div id="logo1">
-          <img src="res/img/rolling-stone.png" alt="rolling-stone" />
+          <img src="res/rolling-stone.png" alt="rolling-stone" />
         </div>
         <div id="logo2">
-          <img src="res/img/Time-Magazine.png" alt="Time-Magazine" />
+          <img src="res/Time-Magazine.png" alt="Time-Magazine" />
         </div>
-        <div id="logo3"><img src="res/img/NASA-1.png" alt="NASA-img" /></div>
+        <div id="logo3"><img src="res/NASA-1.png" alt="NASA-img" /></div>
         <div id="logo4">
-          <img src="res/img/Microsoft.png" alt="Microsoft-img" />
+          <img src="res/Microsoft.png" alt="Microsoft-img" />
         </div>
         <div id="logo5">
-          <img src="res/img/tech-crunch.png" alt="tech-crunch" />
+          <img src="res/tech-crunch.png" alt="tech-crunch" />
         </div>
         <div id="logo6">
-          <img src="res/img/harvard.png" alt="harvard-img" />
+          <img src="res/harvard.png" alt="harvard-img" />
         </div>
       </div>
     </div>
     <div id="samples">
       <div id="sample1">
-        <img src="res/img/wordpress-samples2.png" alt="sample2" />
+        <img src="res/wordpress-samples2.png" alt="sample2" />
       </div>
       <div id="sample2">
-        <img src="res/img/wordpress-samples.png" alt="sample1" />
+        <img src="res/wordpress-samples.png" alt="sample1" />
       </div>
       <div id="sample3">
-        <img src="res/img/wordpress-samples3.png" alt="sample3" />
+        <img src="res/wordpress-samples3.png" alt="sample3" />
       </div>
     </div>
     <div id="wordpress-community-container">
