finished 1st page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/x-icon" href="res/WordPress-logotype-wmark-white.ico">
     <title>Blog Tool, Publishing Platform, and CMS - WordPress.org</title>
     <link rel="stylesheet" href="index.css" />
-    <script src="index.js"></script>
+    <script defer src="index.js"></script>
   </head>
 
   <body>
@@ -175,6 +176,9 @@
           <img src="res/harvard.png" alt="harvard-img" />
         </div>
       </div>
+      <div id="explore-btn-container">
+        <button>Explore the showcase</button>
+      </div>
     </div>
     <div id="samples">
       <div id="sample1">
@@ -197,13 +201,73 @@
           trends, connect with fellow industry experts, and foster your
           professional growth.
         </p>
-        <p>
+        <p style="margin-top: 24px">
           We’re united by the spirit of open source, and the freedom to build,
           transform, and share without barriers. Everyone is welcome.
         </p>
       </div>
-      <div id="community-img-container"></div>
+      <div id="community-img-container">
+        <img src="res/community.png" alt="community" />
+      </div>
     </div>
     <!--------------------------------------------------------------------BODY CONTENT END-------------------------------------------------------------------->
+
+    <!--------------------------------------------------------------------FOOTER START-------------------------------------------------------------------->
+    <div id="footer">
+      <div id="col1">
+        <a href="#">About</a>
+        <a href="#">News</a>
+        <a href="#">Hosting</a>
+        <a href="#">Privacy</a>
+      </div>
+      <div id="col2">
+        <a href="">Showcase</a>
+        <a href="">Themes</a>
+        <a href="">Plugins</a>
+        <a href="">Patterns</a>
+      </div>
+      <div id="col3">
+        <a href="">Learn</a>
+        <a href="">Documentation</a>
+        <a href="">Developers</a>
+        <a href="">WordPress.tv ↗</a>
+      </div>
+      <div id="col4">
+        <a href="">Get Involved</a>
+        <a href="">Events</a>
+        <a href="">Donate ↗</a>
+        <a href="">Swag Store ↗</a>
+      </div>
+    </div>
+    <div id="footer-2">
+      <div style="display: flex; align-items: center">
+        <div id="logo-container-2">
+          <a href="#"
+            ><img
+              src="res/WordPress-logotype-wmark-white.png"
+              alt="wordpress-logo"
+          /></a>
+        </div>
+        <a href="" id="wordpressorg"
+          ><span style="font-weight: bold"
+            ><span style="font-size: 20px">W</span>ORD<span
+              style="font-size: 20px"
+              >P</span
+            >RESS</span
+          ><span>.ORG</span></a
+        >
+      </div>
+      <span style="font-family: 'Times New Roman', Times, serif"
+        >CODE IS POETRY</span
+      >
+      <div id="social-logo-container">
+        <div><a href="https://www.facebook.com/WordPress/"><img src="res/fb-icon.png" alt="fb-icon" /></a></div>
+        <div><a href="https://twitter.com/WordPress"><img src="res/x-logo.png" alt="x-logo" /></a></div>
+        <div><a href=""><a href="https://www.instagram.com/wordpress/"><img src="res/instagram-logo.png" alt="ig-logo" /></a></div>
+        <div><a href="https://www.linkedin.com/company/wordpress"><img src="res/In-White-72.png" alt="" /></a></div>
+        <div><a href="https://www.youtube.com/wordpress"><img src="res/yt-logov2.png" alt="";/></a></div>
+      </div>
+    </div>
+    <!--------------------------------------------------------------------FOOTER END-------------------------------------------------------------------->
   </body>
 </html>
