added showcase webpage

--- a/news.html
+++ b/news.html
@@ -54,9 +54,9 @@
         <div id="dropdown">
           <button id="dropdown_btn">Community<i id="down-arrow"></i></button>
           <div id="dropdown-menu">
-            <li><a href="#">Make WordPress</a></li>
-            <li><a href="#">Photo Directory</a></li>
-            <li><a href="#">Five for the Future</a></li>
+            <li><a href="MakeWordPress.html">Make WordPress</a></li>
+            <li><a href="PhotoDirectory.html">Photo Directory</a></li>
+            <li><a href="FiveForTheFuture.html">Five for the Future</a></li>
             <li><a href="#">Events</a></li>
           </div>
         </div>
@@ -69,6 +69,7 @@
         </div>
       </div>
       <div id="right-btns">
+        <input id="search-box" type="text" placeholder="Search...." />
         <button id="search">
           <div style="height: 25px; width: 25px">
             <img
