--- a/hosting.html
+++ b/hosting.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="res/WordPress-logotype-wmark-white.ico">
     <link rel="stylesheet" href="hosting.css" />
     <script defer src="hosting.js"></script>
-    <title>Document</title>
+    <title>WordPress Hosting | WordPress.org</title>
   </head>
 
   <body>
