--- a/news.html
+++ b/news.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="res/WordPress-logotype-wmark-white.ico">
+    <title>WordPress News – The latest news about WordPress and the WordPress community</title>
     <link rel="stylesheet" href="news.css" />
     <script defer src="news.js"></script>
-    <title>Document</title>
   </head>
 
   <body>
