--- a/showcase.html
+++ b/showcase.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="res/WordPress-logotype-wmark-white.ico">
+    <title>Star-studded sites built with WordPress | WordPress.org</title>
     <link rel="stylesheet" href="showcase.css" />
     <script defer src="showcase.js"></script>
-    <title>Document</title>
   </head>
 
   <body>
