added title highlighting for dropdown

--- a/FiveForTheFuture.html
+++ b/FiveForTheFuture.html
@@ -44,7 +44,7 @@
                 <div id="dropdown-menu">
                     <li><a href="MakeWordPress.html">Make WordPress</a></li>
                     <li><a href="PhotoDirectory.html">Photo Directory</a></li>
-                    <li><a href="FiveForTheFuture.html">Five for the Future</a></li>
+                    <li><a href="FiveForTheFuture.html" style="text-decoration: underline; color: blue;">Five for the Future</a></li>
                     <li><a href="#">Events</a></li>
                 </div>
             </div>
