--- a/MakeWordPress.html
+++ b/MakeWordPress.html
@@ -43,7 +43,7 @@
             <div id="dropdown">
                 <button id="dropdown_btn">Community<span id="arrow"></span></button>
                 <div id="dropdown-menu">
-					<li><a href="MakeWordPress.html">Make WordPress</a></li>
+					<li><a href="MakeWordPress.html" style="text-decoration: underline; color: blue;">Make WordPress</a></li>
 					<li><a href="PhotoDirectory.html">Photo Directory</a></li>
 					<li><a href="FiveForTheFuture.html">Five for the Future</a></li>
                     <li><a href="#">Events</a></li>
