--- a/PhotoDirectory.html
+++ b/PhotoDirectory.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="PhotoDirectory.css">
+    <link rel="icon" type="image/x-icon" href="res/WordPress-logotype-wmark-white.ico">
     <script defer src="PhotoDirectory.js"></script>
-    <title>WordPress Photo Directory</title>
+    <title>WordPress Photo Directory | WordPress.org</title>
 </head>
 
 <body>
@@ -43,7 +44,7 @@
                 <button id="dropdown_btn">Community<span id="arrow"></span></button>
                 <div id="dropdown-menu">
                     <li><a href="MakeWordPress.html">Make WordPress</a></li>
-                    <li><a href="PhotoDirectory.html">Photo Directory</a></li>
+                    <li><a href="PhotoDirectory.html" style="text-decoration: underline; color: blue;">Photo Directory</a></li>
                     <li><a href="FiveForTheFuture.html">Five for the Future</a></li>
                     <li><a href="#">Events</a></li>
                 </div>
