--- a/FiveForTheFuture.html
+++ b/FiveForTheFuture.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="res/WordPress-logotype-wmark-white.ico">
     <link rel="stylesheet" href="FiveForTheFuture.css">
     <script defer src="FiveForTheFuture.js"></script>
     <title>Five for the Future | How five percent is powering the next generation of the web</title>
