fixed footer closings

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" type="image/x-icon" href="res/WordPress-logotype-wmark-white.ico">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="res/WordPress-logotype-wmark-white.ico"
+    />
     <title>Blog Tool, Publishing Platform, and CMS - WordPress.org</title>
     <script defer src="index.js"></script>
     <link rel="stylesheet" href="index.css" />
@@ -60,7 +64,13 @@
       <div id="right-btns">
         <input id="search-box" type="text" placeholder="Search...." />
         <button id="search">
-          <div style="height: 25px; width: 25px;"><img src="res/search-black.png" alt="search-logo" style="width: 100%; height: 100%; object-fit: fill;"/></div>
+          <div style="height: 25px; width: 25px">
+            <img
+              src="res/search-black.png"
+              alt="search-logo"
+              style="width: 100%; height: 100%; object-fit: fill"
+            />
+          </div>
         </button>
         <button id="getwordpress">Get WordPress</button>
       </div>
@@ -217,7 +227,7 @@
     <div id="footer">
       <div id="col1">
         <a href="#">About</a>
-        <a href="news.html">News</a>
+        <a href="#">News</a>
         <a href="#">Hosting</a>
         <a href="#">Privacy</a>
       </div>
@@ -249,7 +259,7 @@
               alt="wordpress-logo"
           /></a>
         </div>
-        <a href="" id="wordpressorg"
+        <a href="index.html" id="wordpressorg"
           ><span style="font-weight: bold"
             ><span style="font-size: 20px">W</span>ORD<span
               style="font-size: 20px"
@@ -262,11 +272,31 @@
         >CODE IS POETRY</span
       >
       <div id="social-logo-container">
-        <div><a href="https://www.facebook.com/WordPress/"><img src="res/fb-icon.png" alt="fb-icon" /></a></div>
-        <div><a href="https://twitter.com/WordPress"><img src="res/x-logo.png" alt="x-logo" /></a></div>
-        <div><a href=""><a href="https://www.instagram.com/wordpress/"><img src="res/instagram-logo.png" alt="ig-logo" /></a></div>
-        <div><a href="https://www.linkedin.com/company/wordpress"><img src="res/In-White-72.png" alt="" /></a></div>
-        <div><a href="https://www.youtube.com/wordpress"><img src="res/yt-logov2.png" alt="";/></a></div>
+        <div>
+          <a href="https://www.facebook.com/WordPress/"
+            ><img src="res/fb-icon.png" alt="fb-icon"
+          /></a>
+        </div>
+        <div>
+          <a href="https://twitter.com/WordPress"
+            ><img src="res/x-logo.png" alt="x-logo"
+          /></a>
+        </div>
+        <div>
+          <a href="https://www.instagram.com/wordpress/"
+            ><img src="res/instagram-logo.png" alt="ig-logo"
+          /></a>
+        </div>
+        <div>
+          <a href="https://www.linkedin.com/company/wordpress"
+            ><img src="res/In-White-72.png" alt=""
+          /></a>
+        </div>
+        <div>
+          <a href="https://www.youtube.com/wordpress"
+            ><img src="res/yt-logov2.png" alt="" ;
+          /></a>
+        </div>
       </div>
     </div>
     <!--------------------------------------------------------------------FOOTER END-------------------------------------------------------------------->
