--- a/hosting.html
+++ b/hosting.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="res/WordPress-logotype-wmark-white.ico">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="res/WordPress-logotype-wmark-white.ico"
+    />
     <link rel="stylesheet" href="hosting.css" />
     <script defer src="hosting.js"></script>
     <title>WordPress Hosting | WordPress.org</title>
