--- a/showcase.html
+++ b/showcase.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="res/WordPress-logotype-wmark-white.ico">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="res/WordPress-logotype-wmark-white.ico"
+    />
     <title>Star-studded sites built with WordPress | WordPress.org</title>
     <link rel="stylesheet" href="showcase.css" />
     <script defer src="showcase.js"></script>
@@ -22,12 +26,17 @@
       </div>
       <div id="nav">
         <button onclick="openNews()">News</button>
-        <button onclick="openShowCase()" style="
-        text-decoration: underline;
-        color: #7b90ff;
-        border-bottom: 5px solid #7b90ff;
-        background-color: #1c2024;
-      ">Showcase</button>
+        <button
+          onclick="openShowCase()"
+          style="
+            text-decoration: underline;
+            color: #7b90ff;
+            border-bottom: 5px solid #7b90ff;
+            background-color: #1c2024;
+          "
+        >
+          Showcase
+        </button>
         <button onclick="openHosting()">Hosting</button>
         <div id="dropdown">
           <button id="dropdown_btn">Extend <i id="down-arrow"></i></button>
@@ -98,129 +107,176 @@
         </div>
       </div>
       <div id="showcase-examples">
-          <div id="sc-ex-header">
-            <input type="text" id="searc-sites" placeholder="Search sites...">
-            <button><img src="res/search-black.png" alt=""></button>
-          </div>
-          <div id="sc-body-cont">
-            <div id="sc-img-cont">
-              <div id="sc-img-1">
-                <img src="res/line-hotels.png" alt="line-hotels">
-                <div id="sc-img-desc"><span>The Line Hotels</span><a href="#">Business</a></div>
-              </div>
-              <div id="sc-img-2">
-                <img src="res/tonal.png" alt="tonal">
-                <div id="sc-img-desc"><span>Tonal</span><a href="#">Business</a></div>
+        <div id="sc-ex-header">
+          <input type="text" id="searc-sites" placeholder="Search sites..." />
+          <button><img src="res/search-black.png" alt="" /></button>
+        </div>
+        <div id="sc-body-cont">
+          <div id="sc-img-cont">
+            <div id="sc-img-1">
+              <img src="res/line-hotels.png" alt="line-hotels" />
+              <div id="sc-img-desc">
+                <span>The Line Hotels</span><a href="#">Business</a>
               </div>
             </div>
-
-            <div id="sc-img-cont">
-              <div id="sc-img-1">
-                <img src="res/women-in-soccer.png" alt="women-in-soccer">
-                <div id="sc-img-desc"><span>Women in Soccer</span><a href="#">Community</a></div>
-              </div>
-              <div id="sc-img-2">
-                <img src="res/ad-dal-pozzo.png" alt="ad-dal-pozzo">
-                <div id="sc-img-desc"><span>AD Dal Pozzo</span><a href="#">Store</a></div>
-              </div>
-            </div>
-
-            <div id="sc-img-cont">
-              <div id="sc-img-1">
-                <img src="res/pichi-avo.png" alt="pichi-avo">
-                <div id="sc-img-desc"><span>PichiAvo</span><a href="#">Creative</a></div>
-              </div>
-              <div id="sc-img-2">
-                <img src="res/noma.png" alt="noma">
-                <div id="sc-img-desc"><span>Noma</span><a href="#">Business</a></div>
-              </div>
-            </div>
-
-            <div id="sc-img-cont">
-              <div id="sc-img-1">
-                <img src="res/landia.png" alt="landia">
-                <div id="sc-img-desc"><span>Landia</span><a href="#">Creative</a></div>
-              </div>
-              <div id="sc-img-2">
-                <img src="res/caeserstone.png" alt="caeserstone">
-                <div id="sc-img-desc"><span>Caeserstone</span><a href="#">Store</a></div>
-              </div>
-            </div>
-
-            <div id="sc-img-cont">
-              <div id="sc-img-1">
-                <img src="res/the-noguchi-museum.png" alt="the-noguchi-museum">
-                <div id="sc-img-desc"><span>The Noguchi Museum</span><a href="#">Creative</a></div>
-              </div>
-              <div id="sc-img-2">
-                <img src="res/moooi.png" alt="moooi">
-                <div id="sc-img-desc"><span>Moooi</span><a href="#">Business</a></div>
-              </div>
-            </div>
-
-            <div id="sc-img-cont">
-              <div id="sc-img-1">
-                <img src="res/ubisoft-quebec.png" alt="ubisoft-quebec">
-                <div id="sc-img-desc"><span>Ubisoft Québec</span><a href="#">Business</a></div>
-              </div>
-              <div id="sc-img-2">
-                <img src="res/ray-charles-video-museum.png" alt="ray-charles-video-museum">
-                <div id="sc-img-desc"><span>Ray Charles Video Museum</span><a href="#">Creative</a></div>
-              </div>
-            </div>
-
-            <div id="sc-img-cont">
-              <div id="sc-img-1">
-                <img src="res/art-gallery-of-ballarat.png" alt="art-gallery-of-ballarat">
-                <div id="sc-img-desc"><span>Art Galley of Ballarat</span><a href="#">Creative</a></div>
-              </div>
-              <div id="sc-img-2">
-                <img src="res/steffie-de-leeuw.png" alt="steffie-de-leeuw">
-                <div id="sc-img-desc"><span>Ray Charles Video Museum</span><a href="#">Creative</a></div>
-              </div>
-            </div>
-
-            <div id="sc-img-cont">
-              <div id="sc-img-1">
-                <img src="res/designmuseum-danmark.png" alt="designmuseum-danmark">
-                <div id="sc-img-desc"><span>Designmuseum Danmark</span><a href="#">Creative</a></div>
-              </div>
-              <div id="sc-img-2">
-                <img src="res/te-tuhi.png" alt="te-tuhi">
-                <div id="sc-img-desc"><span>Te Tuhi</span><a href="#">Creative</a></div>
-              </div>
-            </div>
-
-            <div id="sc-img-cont">
-              <div id="sc-img-1">
-                <img src="res/zoox.png" alt="zoox">
-                <div id="sc-img-desc"><span>Art Galley of Ballarat</span><a href="#">Business</a></div>
-              </div>
-              <div id="sc-img-2">
-                <img src="res/rolling-stone-web.png" alt="rolling-stone-web">
-                <div id="sc-img-desc"><span>Rolling Stone</span><a href="#">Publication</a></div>
+            <div id="sc-img-2">
+              <img src="res/tonal.png" alt="tonal" />
+              <div id="sc-img-desc">
+                <span>Tonal</span><a href="#">Business</a>
               </div>
             </div>
           </div>
+
+          <div id="sc-img-cont">
+            <div id="sc-img-1">
+              <img src="res/women-in-soccer.png" alt="women-in-soccer" />
+              <div id="sc-img-desc">
+                <span>Women in Soccer</span><a href="#">Community</a>
+              </div>
+            </div>
+            <div id="sc-img-2">
+              <img src="res/ad-dal-pozzo.png" alt="ad-dal-pozzo" />
+              <div id="sc-img-desc">
+                <span>AD Dal Pozzo</span><a href="#">Store</a>
+              </div>
+            </div>
+          </div>
+
+          <div id="sc-img-cont">
+            <div id="sc-img-1">
+              <img src="res/pichi-avo.png" alt="pichi-avo" />
+              <div id="sc-img-desc">
+                <span>PichiAvo</span><a href="#">Creative</a>
+              </div>
+            </div>
+            <div id="sc-img-2">
+              <img src="res/noma.png" alt="noma" />
+              <div id="sc-img-desc">
+                <span>Noma</span><a href="#">Business</a>
+              </div>
+            </div>
+          </div>
+
+          <div id="sc-img-cont">
+            <div id="sc-img-1">
+              <img src="res/landia.png" alt="landia" />
+              <div id="sc-img-desc">
+                <span>Landia</span><a href="#">Creative</a>
+              </div>
+            </div>
+            <div id="sc-img-2">
+              <img src="res/caeserstone.png" alt="caeserstone" />
+              <div id="sc-img-desc">
+                <span>Caeserstone</span><a href="#">Store</a>
+              </div>
+            </div>
+          </div>
+
+          <div id="sc-img-cont">
+            <div id="sc-img-1">
+              <img src="res/the-noguchi-museum.png" alt="the-noguchi-museum" />
+              <div id="sc-img-desc">
+                <span>The Noguchi Museum</span><a href="#">Creative</a>
+              </div>
+            </div>
+            <div id="sc-img-2">
+              <img src="res/moooi.png" alt="moooi" />
+              <div id="sc-img-desc">
+                <span>Moooi</span><a href="#">Business</a>
+              </div>
+            </div>
+          </div>
+
+          <div id="sc-img-cont">
+            <div id="sc-img-1">
+              <img src="res/ubisoft-quebec.png" alt="ubisoft-quebec" />
+              <div id="sc-img-desc">
+                <span>Ubisoft Québec</span><a href="#">Business</a>
+              </div>
+            </div>
+            <div id="sc-img-2">
+              <img
+                src="res/ray-charles-video-museum.png"
+                alt="ray-charles-video-museum"
+              />
+              <div id="sc-img-desc">
+                <span>Ray Charles Video Museum</span><a href="#">Creative</a>
+              </div>
+            </div>
+          </div>
+
+          <div id="sc-img-cont">
+            <div id="sc-img-1">
+              <img
+                src="res/art-gallery-of-ballarat.png"
+                alt="art-gallery-of-ballarat"
+              />
+              <div id="sc-img-desc">
+                <span>Art Galley of Ballarat</span><a href="#">Creative</a>
+              </div>
+            </div>
+            <div id="sc-img-2">
+              <img src="res/steffie-de-leeuw.png" alt="steffie-de-leeuw" />
+              <div id="sc-img-desc">
+                <span>Ray Charles Video Museum</span><a href="#">Creative</a>
+              </div>
+            </div>
+          </div>
+
+          <div id="sc-img-cont">
+            <div id="sc-img-1">
+              <img
+                src="res/designmuseum-danmark.png"
+                alt="designmuseum-danmark"
+              />
+              <div id="sc-img-desc">
+                <span>Designmuseum Danmark</span><a href="#">Creative</a>
+              </div>
+            </div>
+            <div id="sc-img-2">
+              <img src="res/te-tuhi.png" alt="te-tuhi" />
+              <div id="sc-img-desc">
+                <span>Te Tuhi</span><a href="#">Creative</a>
+              </div>
+            </div>
+          </div>
+
+          <div id="sc-img-cont">
+            <div id="sc-img-1">
+              <img src="res/zoox.png" alt="zoox" />
+              <div id="sc-img-desc">
+                <span>Art Galley of Ballarat</span><a href="#">Business</a>
+              </div>
+            </div>
+            <div id="sc-img-2">
+              <img src="res/rolling-stone-web.png" alt="rolling-stone-web" />
+              <div id="sc-img-desc">
+                <span>Rolling Stone</span><a href="#">Publication</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-
-
 
       <div id="featured-container">
         <div id="fc-1">
           <h1>Feeling inspired?</h1>
-          <p>Start building a website you love on the open source platform that powers the web.</p>
+          <p>
+            Start building a website you love on the open source platform that
+            powers the web.
+          </p>
           <button>Get WordPress</button>
         </div>
         <div id="fc-2">
           <h1>Want to be featured?</h1>
-          <p>Join other beautifully designed sites in the WordPress Showcase by filling out this form.</p>
+          <p>
+            Join other beautifully designed sites in the WordPress Showcase by
+            filling out this form.
+          </p>
           <button>Submit a site</button>
         </div>
       </div>
     </div>
-
-
 
     <!------------------------------------------------------------- BODY END ------------------------------------------------------------->
     <!------------------------------------------------------------- FOOTER START ------------------------------------------------------------->
