added hosting page

--- a/hosting.html
+++ b/hosting.html
@@ -88,6 +88,16 @@
       </div>
     </div>
     <!------------------------------------------------------------- HEADER END ------------------------------------------------------------->
+
+    <!------------------------------------------------------------- BODY START ------------------------------------------------------------->
+    <div id="body-container">
+      <div id="body-title-cont">
+        <h1>WordPress Hosting</h1>
+      </div>
+    </div>
+
+    <!------------------------------------------------------------- BODY START ------------------------------------------------------------->
+
     <!------------------------------------------------------------- FOOTER START ------------------------------------------------------------->
     <div id="footer">
       <div id="col1">
