added hosting webpage

--- a/MakeWordPress.html
+++ b/MakeWordPress.html
@@ -153,7 +153,7 @@
         </div>
         <div id="coreThirdDetails">
           <p id="or">or</p>
-          <a href="#">or #core-js:community.wordpress.org </a>
+          <a href="#"> #core-js:community.wordpress.org </a>
           <p id="onMatrix">on Matrix</p>
         </div>
       </div>
