--- a/showcase.html
+++ b/showcase.html
@@ -68,8 +68,8 @@
         <div id="dropdown">
           <button id="dropdown_btn">About<i id="down-arrow"></i></button>
           <div id="dropdown-menu">
-            <li><a href="#">About WordPress</a></li>
-            <li><a href="#">Enterprise</a></li>
+            <li><a href="about.html">About WordPress</a></li>
+            <li><a href="enterprise.html">Enterprise</a></li>
           </div>
         </div>
       </div>
