--- a/MakeWordPress.html
+++ b/MakeWordPress.html
@@ -29,7 +29,7 @@
         <button onclick="openShowCase()">Showcase</button>
         <button onclick="openHosting()">Hosting</button>
         <div id="dropdown">
-          <button id="dropdown_btn">Extend<span id="arrow"></span></button>
+          <button id="dropdown_btn">Extend <i id="down-arrow"></i></button>
           <div id="dropdown-menu">
             <li><a href="#">Themes</a></li>
             <li><a href="#">Plugins</a></li>
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div id="dropdown">
-          <button id="dropdown_btn">Learn<span id="arrow"></span></button>
+          <button id="dropdown_btn">Learn<i id="down-arrow"></i></button>
           <div id="dropdown-menu">
             <li><a href="#">Learn WordPress</a></li>
             <li><a href="#">Documentation</a></li>
@@ -47,7 +47,7 @@
           </div>
         </div>
         <div id="dropdown">
-          <button id="dropdown_btn">Community<span id="arrow"></span></button>
+          <button id="dropdown_btn">Community<i id="down-arrow"></i></button>
           <div id="dropdown-menu">
             <li>
               <a
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div id="dropdown">
-          <button id="dropdown_btn">About<span id="arrow"></span></button>
+          <button id="dropdown_btn">About<i id="down-arrow"></i></button>
           <div id="dropdown-menu">
             <li><a href="about.html">About WordPress</a></li>
             <li><a href="enterprise.html">Enterprise</a></li>
@@ -70,6 +70,7 @@
         </div>
       </div>
       <div id="right-btns">
+        <input id="search-box" type="text" placeholder="Search...." />
         <button id="search">
           <div style="height: 25px; width: 25px">
             <img
