--- a/PhotoDirectory.html
+++ b/PhotoDirectory.html
@@ -29,7 +29,7 @@
         <button onclick="openShowCase()">Showcase</button>
         <button onclick="openHosting()">Hosting</button>
         <div id="dropdown">
-          <button id="dropdown_btn">Extend<span id="arrow"></span></button>
+          <button id="dropdown_btn">Extend <i id="down-arrow"></i></button>
           <div id="dropdown-menu">
             <li><a href="#">Themes</a></li>
             <li><a href="#">Plugins</a></li>
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div id="dropdown">
-          <button id="dropdown_btn">Learn<span id="arrow"></span></button>
+          <button id="dropdown_btn">Learn<i id="down-arrow"></i></button>
           <div id="dropdown-menu">
             <li><a href="#">Learn WordPress</a></li>
             <li><a href="#">Documentation</a></li>
@@ -47,9 +47,11 @@
           </div>
         </div>
         <div id="dropdown">
-          <button id="dropdown_btn">Community<span id="arrow"></span></button>
+          <button id="dropdown_btn">Community<i id="down-arrow"></i></button>
           <div id="dropdown-menu">
-            <li><a href="MakeWordPress.html">Make WordPress</a></li>
+            <li>
+              <a href="MakeWordPress.html">Make WordPress</a>
+            </li>
             <li>
               <a
                 href="PhotoDirectory.html"
@@ -62,7 +64,7 @@
           </div>
         </div>
         <div id="dropdown">
-          <button id="dropdown_btn">About<span id="arrow"></span></button>
+          <button id="dropdown_btn">About<i id="down-arrow"></i></button>
           <div id="dropdown-menu">
             <li><a href="about.html">About WordPress</a></li>
             <li><a href="enterprise.html">Enterprise</a></li>
@@ -70,6 +72,7 @@
         </div>
       </div>
       <div id="right-btns">
+        <input id="search-box" type="text" placeholder="Search...." />
         <button id="search">
           <div style="height: 25px; width: 25px">
             <img
@@ -101,7 +104,7 @@
           name="searching"
           required
         />
-        <button id="search">
+        <button id="search-2">
           <img src="res/search-for-light-bg.png" alt="search-logo" />
         </button>
       </div>
