added line height for texts

--- a/enterprise.html
+++ b/enterprise.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="enterprise.css" />
     <script defer src="enterprise.js"></script>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="res/WordPress-logotype-wmark-white.ico"
+    />
     <title>Enterprise – WordPress.org</title>
   </head>
 
