--- a/hosting.html
+++ b/hosting.html
@@ -99,49 +99,98 @@
         <div id="bc-content">
           <div>
             <p>
-              There are hundreds of thousands of web hosts out there, the vast majority of which meet the <a href="#">WordPress minimum requirements</a>, and choosing one from the crowd can be a chore. Just like flowers need the right environment to grow, WordPress works best when it’s in a rich hosting environment.
+              There are hundreds of thousands of web hosts out there, the vast
+              majority of which meet the
+              <a href="#">WordPress minimum requirements</a>, and choosing one
+              from the crowd can be a chore. Just like flowers need the right
+              environment to grow, WordPress works best when it’s in a rich
+              hosting environment.
             </p>
           </div>
           <div>
             <p>
-              We’ve dealt with more hosts than you can imagine; in our opinion, the hosts below represent some of the best and brightest of the hosting world. If you do decide to go with one of the hosts below and click through from this page, some will donate a portion of your fee back—so you can have a great host and support WordPress.org at the same time. If you’d like to try WordPress for free, you can get started with a free website or blog at <a href="">WordPress.com</a>.
+              We’ve dealt with more hosts than you can imagine; in our opinion,
+              the hosts below represent some of the best and brightest of the
+              hosting world. If you do decide to go with one of the hosts below
+              and click through from this page, some will donate a portion of
+              your fee back—so you can have a great host and support
+              WordPress.org at the same time. If you’d like to try WordPress for
+              free, you can get started with a free website or blog at
+              <a href="">WordPress.com</a>.
             </p>
           </div>
         </div>
         <div id="hosting-content">
           <div id="hosting-images">
             <div id="hosting-img-cont">
-              <img src="res/bluehost.png" alt="bluehost">
+              <img src="res/bluehost.png" alt="bluehost" />
             </div>
             <div id="hosting-img-cont">
-              <img src="res/hostinger.png" alt="bluehost">
+              <img src="res/hostinger.png" alt="bluehost" />
             </div>
             <div id="hosting-img-cont">
-              <img src="res/dreamhost.png" alt="bluehost">
+              <img src="res/dreamhost.png" alt="bluehost" />
             </div>
             <div id="hosting-img-cont">
-              <img src="res/word-press-logo-hosting.png" alt="bluehost">
+              <img src="res/word-press-logo-hosting.png" alt="bluehost" />
             </div>
           </div>
           <div id="hosting-text-cont">
             <div id="htc">
               <h2><a href="#">Bluehost</a></h2>
-              <p>Bluehost is WordPress.org's longest running recommended host and offers the ultimate WordPress platform that powers millions of websites. Their shared hosting is benchmarked as delivering best-in-class performance, and for those that demand the fastest speed, 100% uptime and expert support, Bluehost Cloud Hosting offers unmatched power. No matter the solution you choose, you'll get WordPress pre-installed, an AI site builder, free domain name, email, SSL, built-in CDN and more. From blogs, business sites, and online stores, build any kind of website on an easily scalable WordPress-optimized platform backed by legendary 24/7 support by in-house WordPress experts.</p>
+              <p>
+                Bluehost is WordPress.org's longest running recommended host and
+                offers the ultimate WordPress platform that powers millions of
+                websites. Their shared hosting is benchmarked as delivering
+                best-in-class performance, and for those that demand the fastest
+                speed, 100% uptime and expert support, Bluehost Cloud Hosting
+                offers unmatched power. No matter the solution you choose,
+                you'll get WordPress pre-installed, an AI site builder, free
+                domain name, email, SSL, built-in CDN and more. From blogs,
+                business sites, and online stores, build any kind of website on
+                an easily scalable WordPress-optimized platform backed by
+                legendary 24/7 support by in-house WordPress experts.
+              </p>
               <a href="#">Forum threads about Bluehost »</a>
             </div>
             <div id="htc">
               <h2><a href="#">Hostinger </a></h2>
-              <p>Hostinger, trusted by more than 2.5 million clients worldwide, offers fast and secure managed WordPress hosting. Enjoy seamless WordPress experience with a 1-click installer, free domain and SSL, LiteSpeed and object cache for a faster website, and built-in CDN. Focusing on user security, experience and performance, it's an ideal solution for beginners and experts alike. Get smooth, value-driven hosting, backed by 24/7 support of WordPress experts, with Hostinger.</p>
+              <p>
+                Hostinger, trusted by more than 2.5 million clients worldwide,
+                offers fast and secure managed WordPress hosting. Enjoy seamless
+                WordPress experience with a 1-click installer, free domain and
+                SSL, LiteSpeed and object cache for a faster website, and
+                built-in CDN. Focusing on user security, experience and
+                performance, it's an ideal solution for beginners and experts
+                alike. Get smooth, value-driven hosting, backed by 24/7 support
+                of WordPress experts, with Hostinger.
+              </p>
               <a href="#">Forum threads about Hostinger »</a>
             </div>
             <div id="htc">
               <h2><a href="#">DreamHost</a></h2>
-              <p>DreamHost has been committed to WordPress and its community for over 10 years. Our hosting platforms are optimized for WordPress and our team actively contributes to the WordPress community. At DreamHost, you take total control of your server or let our team of experts handle everything for you. DreamHost offers choice, performance and value for new users and experts alike.</p>
+              <p>
+                DreamHost has been committed to WordPress and its community for
+                over 10 years. Our hosting platforms are optimized for WordPress
+                and our team actively contributes to the WordPress community. At
+                DreamHost, you take total control of your server or let our team
+                of experts handle everything for you. DreamHost offers choice,
+                performance and value for new users and experts alike.
+              </p>
               <a href="#">Forum threads about DreamHost »</a>
             </div>
             <div id="htc">
               <h2><a href="#">WordPress.com </a></h2>
-              <p>At WordPress.com, we've built an automatically scalable and secure platform optimized for the latest WordPress has to offer. Start a free website or blog today with everything you need to grow. Get lightning-fast and reliable performance with our global CDN, high-frequency CPUs, multi-datacenter failover, secure login, integrated visitor stats, and more. With managed hosting and the 24/7 support of our dedicated WordPress experts, you'll be well taken care of.</p>
+              <p>
+                At WordPress.com, we've built an automatically scalable and
+                secure platform optimized for the latest WordPress has to offer.
+                Start a free website or blog today with everything you need to
+                grow. Get lightning-fast and reliable performance with our
+                global CDN, high-frequency CPUs, multi-datacenter failover,
+                secure login, integrated visitor stats, and more. With managed
+                hosting and the 24/7 support of our dedicated WordPress experts,
+                you'll be well taken care of.
+              </p>
               <a href="#">Forum threads about WordPress.com »</a>
             </div>
           </div>
@@ -151,17 +200,32 @@
             <div>
               <h1>Host Feedback</h1>
               <p>
-                We’re committed to helping create a wholesome and hassle-free WordPress hosting environment. If you feel there are issues with one of the hosts listed here, please send a note to hosting dash feedback at this domain. If the situation warrants we’ll work with you and your host on a solution. 
+                We’re committed to helping create a wholesome and hassle-free
+                WordPress hosting environment. If you feel there are issues with
+                one of the hosts listed here, please send a note to hosting dash
+                feedback at this domain. If the situation warrants we’ll work
+                with you and your host on a solution.
               </p>
-              <br>
+              <br />
               <p>
-                Note before contacting us: Please don’t send us legal takedown orders or threats, we don’t actually host every WordPress blog in the world. If you don’t understand that, you probably shouldn’t be sending legal notices anyway. 
+                Note before contacting us: Please don’t send us legal takedown
+                orders or threats, we don’t actually host every WordPress blog
+                in the world. If you don’t understand that, you probably
+                shouldn’t be sending legal notices anyway.
               </p>
             </div>
             <div>
               <h1>Be Listed on This Page</h1>
               <p>
-                We’ll be looking at this list several times a year, so keep an eye out for us re-opening the survey for hosts to submit themselves for inclusion. Listing is completely arbitrary, but includes criteria like: contributions to WordPress.org, size of customer base, ease of WP auto-install and auto-upgrades, avoiding GPL violations, design, tone, historical perception, using the correct logo, capitalizing WordPress correctly, not blaming us if you have a security issue, and up-to-date system software. 
+                We’ll be looking at this list several times a year, so keep an
+                eye out for us re-opening the survey for hosts to submit
+                themselves for inclusion. Listing is completely arbitrary, but
+                includes criteria like: contributions to WordPress.org, size of
+                customer base, ease of WP auto-install and auto-upgrades,
+                avoiding GPL violations, design, tone, historical perception,
+                using the correct logo, capitalizing WordPress correctly, not
+                blaming us if you have a security issue, and up-to-date system
+                software.
               </p>
             </div>
           </div>
