--- a/about.html
+++ b/about.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="about.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="res/WordPress-logotype-wmark-white.ico"
+    />
     <script defer src="about.js"></script>
     <title>About – WordPress.org</title>
   </head>
