--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <div id="dropdown">
           <button id="dropdown_btn">Learn<i id="down-arrow"></i></button>
           <div id="dropdown-menu">
-            <li><a href="#">Learn WordPress</a></li>
-            <li><a href="#">Documentation</a></li>
-            <li><a href="#">Forums</a></li>
-            <li><a href="#">Developers</a></li>
+            <li><a href="Learn.html">Learn WordPress</a></li>
+            <li><a href="Document.html">Documentation</a></li>
+            <li><a href="Forums.html">Forums</a></li>
+            <li><a href="Developers.html">Developers</a></li>
           </div>
         </div>
         <div id="dropdown">
