added extend dropdown contents

--- a/Developers.html
+++ b/Developers.html
@@ -26,9 +26,9 @@
                 <div id="dropdown">
                     <button id="dropdown_btn">Extend<span id="arrow"></span></button>
                     <div id="dropdown-menu">
-                        <li><a href="#">Themes</a></li>
+                        <li><a href="Themes.html">Themes</a></li>
                         <li><a href="#">Plugins</a></li>
-                        <li><a href="#">Patterns</a></li>
+                        <li><a href="plugins.html">Patterns</a></li>
                         <li><a href="#">Blocks</a></li>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
                         <li><a href="Learn.html">Learn WordPress</a></li>
                         <li><a href="Document.html">Documentation</a></li>
                         <li><a href="Forums.html">Forums</a></li>
-                        <li><p id="devs"  href="#">Developers</p></li>
+                        <li><p id="devs"  href="#" style="text-decoration: underline; color: blue">Developers</p></li>
                     </div>
                 </div>
                 <div id="dropdown">
