--- a/Document.html
+++ b/Document.html
@@ -25,9 +25,9 @@
             <div id="dropdown">
                 <button id="dropdown_btn">Extend<span id="arrow"></span></button>
                 <div id="dropdown-menu">
-                    <li><a href="#">Themes</a></li>
+                    <li><a href="Themes.html">Themes</a></li>
                     <li><a href="#">Plugins</a></li>
-                    <li><a href="#">Patterns</a></li>
+                    <li><a href="plugins.html">Patterns</a></li>
                     <li><a href="#">Blocks</a></li>
                 </div>
             </div>
