--- a/FiveForTheFuture.html
+++ b/FiveForTheFuture.html
@@ -34,9 +34,9 @@
         <div id="dropdown">
           <button id="dropdown_btn">Extend <i id="down-arrow"></i></button>
           <div id="dropdown-menu">
-            <li><a href="#">Themes</a></li>
+            <li><a href="Themes.html">Themes</a></li>
             <li><a href="#">Plugins</a></li>
-            <li><a href="#">Patterns</a></li>
+            <li><a href="plugins.html">Patterns</a></li>
             <li><a href="#">Blocks</a></li>
           </div>
         </div>
