--- a/Forums.html
+++ b/Forums.html
@@ -26,9 +26,9 @@
                 <div id="dropdown">
                     <button id="dropdown_btn">Extend<span id="arrow"></span></button>
                     <div id="dropdown-menu">
-                        <li><a href="#">Themes</a></li>
+                        <li><a href="Themes.html">Themes</a></li>
                         <li><a href="#">Plugins</a></li>
-                        <li><a href="#">Patterns</a></li>
+                        <li><a href="plugins.html">Patterns</a></li>
                         <li><a href="#">Blocks</a></li>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                     <div id="dropdown-menu">
                         <li><a href="Learn.html">Learn WordPress</a></li>
                         <li><a href="Document.html">Documentation</a></li>
-                        <li><p id="forms" href="#">Forums</p></li>
+                        <li><p id="forms" href="#" style="text-decoration: underline; color: blue">Forums</p></li>
                         <li><a href="Developers.html">Developers</a></li>
                     </div>
                 </div>
