style: :lipstick: Added icon and title for plugin and theme webpages

--- a/plugins.html
+++ b/plugins.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="plugins.css">
+    <title>Block Pattern Directory – WordPress.org</title>
+    <link rel="icon" type="image/png" href="res/logo.png">
     <script defer src="plugins.js"></script>
-    <title>Document</title>
 </head>
 
 <body>
